# usbsdmux

./: .codespellrc  .gitignore  AUTHORS  LICENSE  MANIFEST.in  Makefile  Pca9536.py  README.rst  REQUIREMENTS.packaging.txt  REQUIREMENTS.qa.txt  REUSE.toml  Usb2642Eeprom.py  Usb2642I2C.py  copyright.debian  ctypehelper.py  fastentrypoints.py  muxctl.py  pyproject.toml  setup.cfg  setup.py  stdeb.cfg  test.py  tox.ini
.github/workflows/: black.yml  check-and-build.yaml  check-and-publish.yaml  check.yaml  flake8.yml  pytest.yml  readme.py  readme.yml  reuse.yaml
contrib/: 99-usbsdmux.rules  usbsdmux.config
contrib/systemd/: usbsdmux.service  usbsdmux.socket
contrib/systemd/sysusers.d/: usbsdmux.conf
contrib/udev/: 99-usbsdmux.rules
debian/: changelog  control  copyright  usbsdmux.udev
tests/: test_cli.py  test_sd_regs.py
tests/reference/: regenerate.sh
usbsdmux/: __main__.py  ctypehelper.py  i2c_gpio.py  mqtthelper.py  pca9536.py  platform.py  sd_regs.py  service.py  usb2642.py  usb2642eeprom.py  usb2642i2c.py  usbsdmux.py
